--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "reforma",
+  "name": "react-reforma",
   "version": "1.0.0",
   "description": "Reforma - A Local-State driven approach to form in React",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "test": "test"
+    "test": "ava",
+    "dev": "webpack --watch",
+    "build": "NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,19 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "webpack": "^4.20.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "ava": "^0.25.0",
+    "babel-loader": "^8.0.4",
+    "enzyme": "^3.7.0",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.83.0",
+    "webpack-cli": "^3.1.2"
   }
 }
