--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
     "@babel/env",
     "@babel/preset-react",
     "@babel/preset-flow"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
   ]
 }
