--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "React",
     "Forms"
   ],
+  "ava": {
+    "require": [
+      "@babel/register"
+    ]
+  },
   "author": "Ben Junya",
   "license": "MIT",
   "dependencies": {
@@ -31,11 +36,15 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "ava": "^0.25.0",
+    "@babel/register": "^7.0.0",
+    "ava": "^1.0.0-rc.1",
     "babel-loader": "^8.0.4",
     "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "flow": "^0.2.3",
     "flow-bin": "^0.83.0",
+    "jsdom": "^12.2.0",
+    "react-addons-test-utils": "^15.6.2",
     "webpack-cli": "^3.1.2"
   }
 }
