--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Reforma - A Local-State driven approach to form in React",
   "main": "./lib/index.js",
+  "author": "Ben Junya",
+  "license": "MIT",
   "scripts": {
-    "test": "ava",
+    "test": "jest",
     "dev": "webpack --watch",
     "watch-prod": "NODE_ENV=production webpack --watch",
     "build": "NODE_ENV=production webpack"
@@ -17,13 +19,9 @@
     "React",
     "Forms"
   ],
-  "ava": {
-    "require": [
-      "@babel/register"
-    ]
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js"
   },
-  "author": "Ben Junya",
-  "license": "MIT",
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -36,15 +34,16 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "ava": "^1.0.0-rc.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "flow": "^0.2.3",
     "flow-bin": "^0.83.0",
-    "jsdom": "^12.2.0",
+    "jest": "^23.6.0",
     "react-addons-test-utils": "^15.6.2",
+    "regenerator-runtime": "^0.12.1",
     "webpack-cli": "^3.1.2"
   }
 }
