--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack --watch",
+    "flow": "flow",
+    "flow-watch": "flow-watch",
     "watch-prod": "NODE_ENV=production webpack --watch",
     "build": "NODE_ENV=production webpack"
   },
@@ -42,6 +44,8 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "flow": "^0.2.3",
     "flow-bin": "^0.83.0",
+    "flow-typed": "^2.5.1",
+    "flow-watch": "^1.1.3",
     "jest": "^23.6.0",
     "react-addons-test-utils": "^15.6.2",
     "regenerator-runtime": "^0.12.1",
