--- a/package.json
+++ b/package.json
@@ -38,10 +38,15 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "eslint": "^5.8.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-flowtype": "^3.1.4",
+    "eslint-plugin-react": "^7.11.1",
     "flow": "^0.2.3",
     "flow-bin": "^0.84.0",
     "flow-typed": "^2.5.1",
