Fix values convenience getter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:react/recommended",
     "plugin:flowtype/recommended"
   ],
   "parser": "babel-eslint",
@@ -23,7 +24,7 @@
   "rules": {
     "indent": [
       "error",
-      4
+      2
     ],
     "linebreak-style": [
       "error",
@@ -39,6 +40,8 @@
     ],
     "no-console": [
     	"warn"
-    ]
+    ],
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
   }
 }
