--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://www.github.com/MrBenJ/reforma"
+    "url": "https://www.github.com/MrBenJ/react-reforma"
   },
   "keywords": [
     "React",
