--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,11 @@
     "react",
     "flowtype"
   ],
+  "settings": {
+    "react": {
+      "version": "16.5.2"
+    }
+  },
   "rules": {
     "indent": [
       "error",
@@ -32,7 +37,8 @@
     ],
     "quotes": [
       "error",
-      "single"
+      "single",
+      { "avoidEscape": true }
     ],
     "semi": [
       "error",
@@ -40,6 +46,10 @@
     ],
     "no-console": [
     	"warn"
+    ],
+    "no-unused-vars": [
+      "error",
+      { "varsIgnorePattern": "[iI]gnored"}
     ],
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error"
