--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@
 version: 2
 jobs:
   build:
+    environment:
+      CC_TEST_REPORTER_ID: ecb6466c24cf3ec414da2ded52051177c2bc648bc2bd1810376d717aa3e90b23
     docker:
       # specify the version you desire here
       - image: circleci/node:8.2.1
@@ -26,19 +28,37 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm install
+      - run:
+          name: Setup Dependencies
+          command: |
+            npm install
 
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests
-      - run: npm test
+      - run:
+          name: Setup Code Climage test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+
+      - run:
+          name: Run tests with coverage
+          command: |
+            ./cc-test-reporter before-build
+            npm test-coverage
+            ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
 
       # run flow
-      - run: npm run flow
+      - run:
+          name: Run flow static typechecking
+          command: |
+            npm run flow
 
       # lint
-      - run: npm run lint
-
+      - run:
+          name: Run ESLint
+          command: |
+             npm run lint
