--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
+    "test-coverage": "jest --coverage",
     "dev": "webpack --watch",
     "lint": "eslint \"./src/**/*.js\"",
     "flow": "flow",
