--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           name: Run tests with coverage
           command: |
             ./cc-test-reporter before-build
-            npm test-coverage
+            npm run test-coverage
             ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
 
       # run flow
