--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "flow-bin": "^0.89.0",
     "flow-typed": "^2.5.1",
     "flow-watch": "^1.1.4",
+    "husky": "^1.2.1",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
