Relax flowtype/generic-spacing fail for prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,9 @@
       { "varsIgnorePattern": "[iI]gnored"}
     ],
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "flowtype/generic-spacing": [
+      "off"
+    ]
   }
 }
